--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "init_db": "npx prisma db push",
+    "begin": "bin/startup.sh"
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
