--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "sideEffects": false,
-  "prisma" : {
-	  "seed": "node --require esbuild-register prisma/seed.ts"
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
   },
   "scripts": {
     "build": "remix build",
@@ -13,10 +13,15 @@
     "begin": "bin/startup.sh"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
     "@prisma/client": "^4.7.1",
     "@remix-run/node": "^1.8.2",
     "@remix-run/react": "^1.8.2",
     "@remix-run/serve": "^1.8.2",
+    "framer-motion": "^6.5.1",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
