--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "esbuild-register": "^3.4.1",
     "eslint": "^8.27.0",
     "prisma": "^4.7.1",
+    "remix": "^1.9.0",
     "typescript": "^4.8.4"
   },
   "engines": {
