Adding timeline comp & data connection

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "begin": "bin/startup.sh"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.14",
     "@chakra-ui/react": "^2.4.4",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
